--- a/templates/tourbaseen.html
+++ b/templates/tourbaseen.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" href="{% static "css/style.css"%}">
 	<link rel="stylesheet" href="{% static "css/shop.style.css"%}">
 	<link rel="stylesheet" href="{% static "css/app.css"%}">
+	<link rel="stylesheet" href="{% static "css/blocks.css"%}">
 
 	<!-- CSS Header and Footer -->
 	<link rel="stylesheet" href="{% static "css/headers/header-default.css"%}">
@@ -40,10 +41,13 @@
 
 	<!-- CSS Page Style -->
 	<link rel="stylesheet" href="{% static "css/pages/blog.css"%}">
+	<link rel="stylesheet" href="{% static "css/pages/shortcode_timeline2.css"%}">
+	<link rel="stylesheet" href="{% static "css/pages/shortcode_timeline1.css"%}">
 
 	<!-- CSS Theme -->
 	<link rel="stylesheet" href="{% static "css/theme-colors/default.css"%}" id="style_color">
 	<link rel="stylesheet" href="{% static "css/theme-skins/dark.css"%}">
+	<link rel="stylesheet" href="{% static "css/travel.style.css"%}">
 
 	<!-- CSS Customization -->
 	<link rel="stylesheet" href="{% static "css/custom.css"%}">
