--- a/templates/rentacar.html
+++ b/templates/rentacar.html
@@ -446,107 +446,7 @@
 
 
 
-		<!--=== Footer Version 1 ===-->
-		<div class="footer-v1">
-			<div class="footer">
-				<div class="container">
-					<div class="row">
-						<!-- About -->
-						<div class="col-md-3 md-margin-bottom-40">
-							<a href="/"><img id="logo-footer" class="footer-logo" src="{% static "img/logo2-default.png"%}" alt=""></a>
-							<h4>BRIGHT TOURS</h4>
-							<p>Size Bosna Hersek ve Balkanlarda en güzel tatili geçirmenizi sağlayacağız.</p>
-						</div><!--/col-md-3-->
-						<!-- End About -->
-
-						<!-- Link List -->
-						<div class="col-md-3 md-margin-bottom-40">
-							<div class="headline"><h2>ALTERNATİF TURLAR</h2></div>
-							<ul class="list-unstyled link-list">
-								<li><a href="/alternatives">Rafting</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/alternatives">Kayak</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/alternatives">At Binicilik</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/alternatives">Buz Pateni</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/alternatives">Daha Fazlası ...</a><i class="fa fa-angle-right"></i></li>
-							</ul>
-						</div><!--/col-md-3-->
-						<!-- End Link List -->
-
-						<!-- Link List -->
-						<div class="col-md-3 md-margin-bottom-40">
-							<div class="headline"><h2>BOSNA TURLARI</h2></div>
-							<ul class="list-unstyled link-list">
-								<li><a href="/bosnia-tours">Saraybosna</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/bosnia-tours">Saraybosna-Mostar</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/bosnia-tours">Saraybosna-Mostar-Travnik</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/bosnia-tours">Saraybosna-Mostar-Travnik-Vişegrad</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/bosnia-tours">Saraybosna-Mostar-Travnik-Jajce-Vişegrad</a><i class="fa fa-angle-right"></i></li>
-							</ul>
-						</div><!--/col-md-3-->
-						<!-- End Link List -->
-
-						<!-- Link List -->
-						<div class="col-md-3 md-margin-bottom-40">
-							<div class="headline"><h2>BALKAN TURLARI</h2></div>
-							<ul class="list-unstyled link-list">
-								<li><a href="/balkan-tours">BOSNA HERSEK-SIRBİSTAN</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/balkan-tours">BOSNA HERSEK-KARADAĞ</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/balkan-tours">BOSNA HERSEK-KARADAĞ-KOSOVA-MAKEDONYA</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/balkan-tours">BOSNA HERSEK-KARADAĞ-ARNAVUTLUK</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/balkan-tours">HIRVATİSTAN-KARADAĞ</a><i class="fa fa-angle-right"></i></li>
-							</ul>
-						</div><!--/col-md-3-->
-						<!-- End Link List -->
-					</div>
-				</div>
-			</div><!--/footer-->
-
-			<div class="copyright">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-6">
-							<p>
-								2017 &copy; All Rights Reserved.
-								<a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
-							</p>
-						</div>
-
-						<!-- Social Links -->
-						<div class="col-md-6">
-							<ul class="footer-socials list-inline">
-								<li>
-									<a href="#" class="tooltips" data-toggle="tooltip" data-placement="top" title="" data-original-title="Facebook">
-										<i class="fa fa-facebook"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="tooltips" data-toggle="tooltip" data-placement="top" title="" data-original-title="Skype">
-										<i class="fa fa-skype"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="tooltips" data-toggle="tooltip" data-placement="top" title="" data-original-title="Google Plus">
-										<i class="fa fa-google-plus"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="tooltips" data-toggle="tooltip" data-placement="top" title="" data-original-title="Linkedin">
-										<i class="fa fa-linkedin"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="tooltips" data-toggle="tooltip" data-placement="top" title="" data-original-title="Twitter">
-										<i class="fa fa-twitter"></i>
-									</a>
-								</li>
-							</ul>
-						</div>
-						<!-- End Social Links -->
-					</div>
-				</div>
-			</div><!--/copyright-->
-		</div>
-		<!--=== End Footer Version 1 ===-->
+		{% include 'footer.html' %}
 	</div><!--/wrapper-->
 
 	<!--=== Style Switcher ===-->
