--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -66,13 +66,13 @@
 						</li>
 						<!-- End Portfolio -->
 
-						<!-- Cities -->
+						<!-- Home -->
 						<li class="headline">
 							<a href="/cities">
 								ŞEHİRLER
 							</a>
 						</li>
-						<!-- End Cities -->
+						<!-- End Home -->
 
 						<!-- Features -->
 						<li class="headline">
@@ -89,88 +89,79 @@
 		</div>
 		<!--=== End Header ===-->
 
-		<!--=== Breadcrumbs ===-->
-		<div class="breadcrumbs">
-			<div class="container">
-				<h1 class="pull-left">GALERİ</h1>
-				<ul class="pull-right breadcrumb">
-					<li><a href="Home">Ana Sayfa</a></li>
-					<li class="active">Galeri</li>
-				</ul>
-			</div>
-		</div><!--/breadcrumbs-->
-		<!--=== End Breadcrumbs ===-->
-
 		<!--=== Content Part ===-->
-		<div class="blog_masonry_3col">
-			<div class="container content grid-boxes">
 
-				<div class="grid-boxes-in">
-					<div class="responsive-video">
-						<iframe frameborder="0" src="https://www.youtube.com/embed/JuzW1gtO5DQ" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
-					</div>
-					<div class="grid-boxes-caption">
-						<h3>Saraybosna</h3>
-					</div>
-				</div>
-				<div class="grid-boxes-in">
-					<img class="img-responsive" src="{% static "img/main/tunel.JPG"%}" alt="">
-					<div class="grid-boxes-caption">
-						<h3>Tünel</h3>
-					</div>
-				</div>
 
-				<div class="grid-boxes-in">
-					<img class="img-responsive" src="{% static "img/main/sebill.jpg"%}" alt="">
-					<div class="grid-boxes-caption">
-						<h3>Sebil</h3>
+		<!--=== News Block ===-->
+		<div class="container content-sm">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6 md-margin-bottom-10">
+						<h2 class="title-v2">NERETVA TRAVEL</h2>
+						<p>Çok kısa zamanda turizm sektöründe sağladığı başarıları, kısa sürede ulaştığı geniş müşteri portföyü, uzman kadrosu ve profesyonel çözümleriyle bu gün ülke turizmine ve ekonomisine sağladığı katkının haklı gururunu taşımaktadır. • Ayrıca, turizm hizmetlerinin yanı sıra sosyal sorumluluk bilinciyle varlığını sürdürdüğü topluma katma değer sağlayacak faaliyetleri de gerçekleştirmektedir. • NERETVA TRAVEL müşterilerine verdiği hizmet kalitesiyle ve gelişmekte olan dinamik turizm dünyasını takip etmesiyle beklentilere uygun istikrarlı çözümler sunmaktadır. Ayrıca kurumlara yönelik çalışmalarında; ihtiyaç duyulan hizmetin kurumsal yapınıza en uygun şekilde karşılanması amacıyla sürekli yatırımlarını sürdürmekte, teknolojik altyapısını geliştirmektedir.
+						<h2 class="title-v2">Kurumsal Hizmetler</h2>
+						<p>İşletmelerin her türlü kurumsal ihtiyacına özel şekilde,<br>
+						BALKANLAR ve ORTA AVRUPA;<br>
+						Kongre ve Fuar organizasyonları,<br>
+						incentive grupları,<br>
+						Belediye, Dernek ve Vakıf grupları,<br>
+						okullar, spor klüpleri<br>
+						maç ve kamp organizasyonlarında<br>
+						konaklama ve uçak bileti alternatifleri,<br>
+						seminerler ve fuar organizasyonlarına cazip fiyat ve alternatif çözümler sunmaktayız. Yaptığımız her organizasyonu iş disiplininden taviz vermeden aynı zamanda da misafir memnuniyetini ilk sıraya koyarak samimiyetle yapmaktayız.
+						</p>
+					</div>
+					<div class="col-md-6">
+						<img class="img-responsive" src="{% static "img-temp/cities/sarajevo2.jpg"%}" alt="" >
 					</div>
 				</div>
-
-				<div class="grid-boxes-in">
-					<img class="img-responsive full-width" src="{% static "img/main/saatkulesi.JPG"%}" alt="">
-					<div class="grid-boxes-caption">
-						<h3>Saat Kulesi</h3>
-					</div>
-				</div>
-
-				<div class="grid-boxes-in">
-					<img class="img-responsive full-width" src="{% static "img/main/sadirvan.JPG"%}" alt="">
-					<div class="grid-boxes-caption">
-						<h3>Şadırvan</h3>
-					</div>
-				</div>
-
-				<div class="grid-boxes-in">
-					<img class="img-responsive full-width" src="{% static "img/main/skakavac.JPG"%}" alt="">
-					<div class="grid-boxes-caption">
-						<h3>Skakavac Şelalesi</h3>
-					</div>
-				</div>
-				<div class="grid-boxes-in">
-					<img class="img-responsive" src="{% static "img/main/gazihusrev.JPG"%}" alt="">
-					<div class="grid-boxes-caption">
-						<h3>Gazi Hüsrev Bey Camii</h3>
-					</div>
-				</div>
-
-				<div class="grid-boxes-in">
-					<img class="img-responsive" src="{% static "img/main/sebill.jpg"%}" alt="">
-					<div class="grid-boxes-caption">
-						<h3>Sebil</h3>
-					</div>
-				</div>
-
-				<div class="grid-boxes-in">
-					<img class="img-responsive full-width" src="{% static "img/main/saatkulesi.JPG"%}" alt="">
-					<div class="grid-boxes-caption">
-						<h3>Saat Kulesi</h3>
-					</div>
-				</div>
-			</div><!--/container-->
+			</div>
 		</div>
+		<!--=== End News Block ===-->
+
+
+		<!--=== Service Blcoks ===-->
+		<div>
+			<div class="text-center margin-bottom-10">
+				<h2 class="title-v2 title-center">DİĞER HİZMETLERİMİZ</h2>
+			</div>
+		</div>
+
+		<!--=== Colorful Service Blocks ===-->
+		<div class="container-fluid">
+			<div class="row no-gutter equal-height-columns margin-bottom-10">
+				<div class="col-sm-3">
+					<div class="service-block service-block-purple no-margin-bottom content equal-height-column">
+						<h2 class="heading-md font-light">Kültür Turları</h2>
+						<p class="no-margin-bottom font-light">Balkanlar ve Orta Avrupa’nın en güzel şehirlerine rehberlik ve ulaşım hizmetleri ile en iyi alternatifler Bright Travelda. Sizleri ekstra tur bilmecesine sokmadan paket turlarla mevcut zamanı en güzel şekilde değerlendirip bölgenin en verimli şekilde görülmesini ve en güzel yöresel tadları sizdeğerli misafirlerimize sunuyoruz.</p>
+					</div>
+				</div>
+				<div class="col-sm-3">
+					<div class="service-block service-block-red no-margin-bottom content equal-height-column">
+						<h2 class="heading-md font-light">Kişiye Özel Turlar</h2>
+						<p class="no-margin-bottom font-light">Hayalini kurduğunuz romantik balayı, hayatınızın macera tatili, tüm yıl beklenen yaz tatili ya da iş seyahatiniz için her anıyla size özel olarak tasarlayabileceğiniz birbirinden özel tadlar tadıp anılarınızı fotoğraflayabileceğiniz butik turlar.</p>
+					</div>
+				</div>
+				<div class="col-sm-3">
+					<div class="service-block service-block-purple no-margin-bottom content equal-height-column">
+						<h2 class="heading-md font-light">Tüm Havayolu Bilet Rezervasyonları</h2>
+						<p class="no-margin-bottom font-light">Misafirlerimize Yurtiçi ve Yurtdışı tüm havayollarına ait uçak biletlerini, uçuş kampanyaları ile birlikte en uygun fiyatlarla alternatifler ve taksit imkanlarıyla sunmaktayız.</p>
+					</div>
+				</div>
+				<div class="col-sm-3">
+					<div class="service-block service-block-orange no-margin-bottom content equal-height-column">
+						<h2 class="heading-md font-light">Transfer Hizmetleri</h2>
+						<p class="no-margin-bottom font-light">Balkanlar ve Orta Avrupa’da herhangi bir Havalimanından dilediğiniz bir noktaya sizleri güvenli ve konforlu ulaşım imkânı sunmaktayız.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--=== End Colorful Service Blocks ===-->
+
+
 		<!--=== End Content Part ===-->
 
+		<hr>
 
 
 		{% include 'footer.html' %}
@@ -256,14 +247,12 @@
 	<script type="text/javascript" src="{% static "plugins/jquery/jquery-migrate.min.js"%}"></script>
 	<script type="text/javascript" src="{% static "plugins/bootstrap/js/bootstrap.min.js"%}"></script>
 	<!-- JS Implementing Plugins -->
-	<script type="text/javascript" src="{% static "plugins/smoothScroll.js"%}"></script>
 	<!--<script type="text/javascript" src="{% static "plugins/back-to-top.js"%}"></script>-->
-	<script type="text/javascript" src="{% static "plugins/masonry/jquery.masonry.min.js"%}"></script>
+	<script type="text/javascript" src="{% static "plugins/smoothScroll.js"%}"></script>
 	<!-- JS Customization -->
 	<script type="text/javascript" src="{% static "js/custom.js"%}"></script>
 	<!-- JS Page Level -->
 	<script type="text/javascript" src="{% static "js/app.js"%}"></script>
-	<script type="text/javascript" src="{% static "js/pages/blog-masonry.js"%}"></script>
 	<script type="text/javascript" src="{% static "js/plugins/style-switcher.js"%}"></script>
 	<script type="text/javascript">
 		jQuery(document).ready(function() {
