--- a/templates/hotels.html
+++ b/templates/hotels.html
@@ -59,7 +59,7 @@
 						<!-- End Pages -->
 
 						<!-- Portfolio -->
-						<li class="headline active">
+						<li class="headline">
 							<a href="/alternatives" >
 								ALTERNATİF TURLAR
 							</a>
@@ -92,326 +92,91 @@
 		<!--=== Breadcrumbs ===-->
 		<div class="breadcrumbs">
 			<div class="container">
-				<h1 class="pull-left">ALTERNATİF TURLAR</h1>
+				<h1 class="pull-left">Oteller</h1>
 				<ul class="pull-right breadcrumb">
 					<li><a href="/">Ana Sayfa</a></li>
-					<li class="active">Alternatif Turlar</li>
+					<li class="active">Oteller</li>
 				</ul>
 			</div>
 		</div><!--/breadcrumbs-->
 		<!--=== End Breadcrumbs ===-->
 
 		<!--=== Content Part ===-->
-					<!-- News v2 Gray -->
+		<!-- News v2 Gray -->
+		<div class="container content-md">
+			<div class="row news-v2">
+				<div class="col-md-4 sm-margin-bottom-30">
+					<div class="news-v2-badge">
+						<img class="img-responsive" src="{% static "img-temp/hotels/holywood.jpg"%}" alt="">
+					</div>
+					<div class="news-v2-desc bg-color-light">
+						<h3><a href="#">Hotel Holywood</a></h3>
+						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+							| Saraybosna | Bosna Hersek</small>
+					</div>
+				</div>
+				<div class="col-md-4 sm-margin-bottom-30">
+					<div class="news-v2-badge">
+						<img class="img-responsive" src="{% static "img-temp/hotels/europe.jpg"%}" alt="">
+					</div>
+					<div class="news-v2-desc bg-color-light">
+						<h3><a href="#">Hotel Europe</a></h3>
+						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+							| Saraybosna | Bosna Hersek</small>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="news-v2-badge">
+						<img class="img-responsive" src="{% static "img-temp/hotels/sarajevo.jpg"%}" alt="">
+					</div>
+					<div class="news-v2-desc bg-color-light">
+						<h3><a href="#">Hotel Sarajevo</a></h3>
+						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+							| Saraybosna | Bosna Hersek</small>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End News v2 Gray -->
+
+		<!-- News v2 Light -->
+		<div class="bg-color-light">
 			<div class="container content-md">
-
-				<!-- Left Sidebar -->
-				<div class="col-md-12 md-margin-bottom-40">
-						<!--Inversed and Rounded Buttons-->
-						<div class="row brand-page margin-bottom-40">
-							<div class="col-sm-6 col-md-3">
-								<a href="#fishing">
-									<button class="btn btn-block btn-html5-inversed rounded" >Balıkcılık</button>
-								</a>
-							</div>
-							<div class="col-sm-6 col-md-3">
-								<a href="#camping">
-								<button class="btn btn-block btn-html5-inversed rounded">Orman Kampı
-								</button>
-								</a>
-							</div>
-							<div class="col-sm-6 col-md-3">
-								<a href="#parachute">
-								<button class="btn btn-block btn-html5-inversed rounded">Yamaç Paraşütü
-								</button>
-								</a>
-							</div>
-							<div class="col-sm-6 col-md-3">
-								<a href="#tracking">
-								<button class="btn btn-block btn-html5-inversed rounded">Treking
-								</button>
-								</a>
-							</div>
-							<div class="col-sm-6 col-md-1">
-								<a href="#rafting">
-								<button class="btn btn-block btn-html5-inversed rounded">Rafting
-								</button>
-								</a>
-							</div>
-							<div class="col-sm-6 col-md-1">
-								<a href="#skiing">
-								<button class="btn btn-block btn-html5-inversed rounded">Kayak
-								</button>
-								</a>
-							</div>
-							<div class="col-sm-6 col-md-3">
-								<a href="#mountainhotel">
-								<button class="btn btn-block btn-html5-inversed rounded">Dağ Oteli
-								</button>
-								</a>
-							</div>
-							<div class="col-sm-6 col-md-2">
-								<a href="#cave">
-								<button class="btn btn-block btn-html5-inversed rounded">Mağara Gezisi
-								</button>
-								</a>
-							</div>
-							<div class="col-sm-6 col-md-3">
-								<a href="#horsebackriding">
-								<button class="btn btn-block btn-html5-inversed rounded">At Binicilik
-								</button>
-							</div>
-							<div class="col-sm-6 col-md-2">
-								<a href="#pyramit">
-								<button class="btn btn-block btn-html5-inversed rounded">Piramitler
-								</button>
-								</a>
-							</div>
-							<div class="col-sm-6 col-md-3">
-								<a href="#iceskating">
-								<button class="btn btn-block btn-html5-inversed rounded">Buz Pateni
-								</button>
-								</a>
-							</div>
-							<div class="col-sm-6 col-md-3">
-								<a href="#titosbanker">
-								<button class="btn btn-block btn-html5-inversed rounded">Tito'nun Sığınağı
-								</button>
-								</a>
-							</div>
-							<div class="col-sm-6 col-md-2">
-								<a href="#donkey">
-								<button class="btn btn-block btn-html5-inversed rounded">Eşek Çiftliği
-								</button>
-								</a>
-							</div>
-							<div class="col-sm-6 col-md-2">
-								<a href="#sosvillage">
-								<button class="btn btn-block btn-html5-inversed rounded">SOS Köyü
-								</button>
-								</a>
-							</div>
-							<div class="col-sm-6 col-md-2">
-								<a href="#termal">
-								<button class="btn btn-block btn-html5-inversed rounded">Kaplıca
-								</button>
-								</a>
-							</div>
+				<div class="row news-v2">
+					<div class="col-md-4 sm-margin-bottom-30">
+						<div class="news-v2-badge">
+							<img class="img-responsive" src="{% static "img-temp/hotels/hills.jpg"%}" alt="">
 						</div>
-						<!--Inversed and Rounded Buttons-->
-						<div class="row news-v2">
-							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge" id="fishing">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/balikcilik.jpg"%}" alt="">
-									<p>
-										<span>€ 30</span>
-									</p>
-								</div>
-								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Balıkçılık</a></h3>
-									<p>Balıkçılık</p>
-								</div>
-							</div>
-							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge" id="camping">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/kamping.jpg"%}" alt="">
-									<p>
-										<span>€ 30</span>
-										
-									</p>
-								</div>
-								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Orman kampı</a></h3>
-									<p>Orman Kampı</p>
-								</div>
-							</div>
-							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge" id="parachute">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/yamacparasutu.jpg"%}" alt="">
-									<p>
-										<span>€ 30</span>
-
-									</p>
-								</div>
-								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Yamaç Paraşütü</a></h3>
-									<p>Yamaç Paraşütü</p>
-								</div>
-							</div>
-						</div>
-						<br>
-
-						<div class="row news-v2">
-							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge" id="tracking">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/treking.jpg"%}" alt="">
-									<p>
-										<span>€ 30</span>
-									</p>
-								</div>
-								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Treking</a></h3>
-									<p>Treking</p>
-								</div>
-							</div>
-							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge" id="mountainhotel">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/dagoteli.jpg"%}" alt="">
-									<p>
-										<span>€ 30</span>
-
-									</p>
-								</div>
-								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Dağ Oteli</a></h3>
-									<p>Dağ Oteli </p>
-								</div>
-							</div>
-							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge" id="cave">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/cave.jpg"%}" alt="">
-									<p>
-										<span>€ 30</span>
-
-									</p>
-								</div>
-								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Mağara Gezisi</a></h3>
-									<p>Mağara Gezisi </p>
-								</div>
-							</div>
-						</div>
-						<br>
-						<div class="row news-v2">
-							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge" id="horsebackriding">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/atbinicilik.jpg"%}" alt="">
-									<p>
-										<span>€ 30</span>
-
-									</p>
-								</div>
-								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">At Binicilik</a></h3>
-									<p>At Binicilik </p>
-								</div>
-							</div>
-							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge" id="pyramit">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/piramit.jpg"%}" alt="">
-									<p>
-										<span>€ 30</span>
-
-									</p>
-								</div>
-								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Piramitler</a></h3>
-									<p>Piramitler </p>
-								</div>
-							</div>
-							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge" id="iceskating">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/buzpateni.jpg"%}" alt="">
-									<p>
-										<span>€ 30</span>
-
-									</p>
-								</div>
-								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Buz Pateni</a></h3>
-									<p>Buz Pateni </p>
-								</div>
-							</div>
-						</div>
-						<br>
-						<div class="row news-v2">
-							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge" id="skiing">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/kayak.jpg"%}" alt="">
-									<p>
-										<span>€ 30</span>
-
-									</p>
-								</div>
-								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Kayak</a></h3>
-									<p>Kayak </p>
-								</div>
-							</div>
-							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge" id="rafting">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/rafting.jpg"%}" alt="">
-									<p>
-										<span>€ 30</span>
-
-									</p>
-								</div>
-								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Rafting</a></h3>
-									<p>Rafting </p>
-								</div>
-							</div>
-							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge" id="titosbanker">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/titonunsiginagi.jpg"%}" alt="">
-									<p>
-										<span>€ 30</span>
-
-									</p>
-								</div>
-								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Tito'nun Sığınağı</a></h3>
-									<p>Tito'nun Sığınağı </p>
-								</div>
-							</div>
-						</div>
-						<br>
-						<div class="row news-v2">
-							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge" id="donkey">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/esekciftligi.jpg"%}" alt="">
-									<p>
-										<span>€ 30</span>
-
-									</p>
-								</div>
-								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Eşek Çiftiği</a></h3>
-									<p>Eşek Çiftiği </p>
-								</div>
-							</div>
-							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge" id="sosvillage">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/soskoyu.jpg"%}" alt="">
-									<p>
-										<span>€ 30</span>
-
-									</p>
-								</div>
-								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">SOS Köyü</a></h3>
-									<p>SOS Köyü </p>
-								</div>
-							</div>
-							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge" id="termal">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/kaplica.jpg"%}" alt="">
-									<p>
-										<span>€ 30</span>
-
-									</p>
-								</div>
-								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Kaplıcalar</a></h3>
-									<p>Kaplıcalar </p>
-								</div>
-							</div>
+						<div class="news-v2-desc">
+							<h3><a href="#">Hotel Hills</a></h3>
+							<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+							| Saraybosna | Bosna Hersek</small>
 						</div>
 					</div>
-					<!-- End News v2 Gray -->
-
+					<div class="col-md-4 sm-margin-bottom-30">
+						<div class="news-v2-badge">
+							<img class="img-responsive" src="{% static "img-temp/hotels/krone.jpg"%}" alt="">
+						</div>
+						<div class="news-v2-desc">
+							<h3><a href="#">Hotel Krone</a></h3>
+							<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+							| Saraybosna | Bosna Hersek</small>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="news-v2-badge">
+							<img class="img-responsive" src="{% static "img-temp/hotels/terma.jpg"%}" alt="">
+						</div>
+						<div class="news-v2-desc">
+							<h3><a href="#">Terma Hotel</a></h3>
+							<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+							| Saraybosna | Bosna Hersek</small>
+						</div>
+					</div>
 				</div>
-				<!-- End Left Sidebar -->
+			</div>
+		</div>
+		<!-- End News v2 Light -->
 
 		<!--=== End Content Part ===-->
 
