--- a/templates/tourbaseen.html
+++ b/templates/tourbaseen.html
@@ -45,6 +45,7 @@
 	<link rel="stylesheet" href="{% static "css/pages/shortcode_timeline1.css"%}">
 	<link rel="stylesheet" href="{% static "css/pages/pricing_v8.css"%}">
 	<link rel="stylesheet" href="{% static "css/pages/blog_masonry_3col.css"%}">
+	<link rel="stylesheet" href="{% static "css/pages/page_search.css"%}">
 
 	<!-- CSS Theme -->
 	<link rel="stylesheet" href="{% static "css/theme-colors/default.css"%}" id="style_color">
