--- a/templates/bs-tour.html
+++ b/templates/bs-tour.html
@@ -19,11 +19,13 @@
 				<!-- Topbar -->
 				<div class="topbar">
 					<ul class="loginbar pull-right">
-						<li><a href="/contact">HAKKIMIZDA</a></li>
+						<li><a href="/aboutus">HAKKIMIZDA</a></li>
 						<li class="topbar-devider"></li>
 						<li><a href="/contact">İLETİŞİM</a></li>
 						<li class="topbar-devider"></li>
 						<li><a href="/gallery">GALERİ</a></li>
+						<li class="topbar-devider"></li>
+						<li><a href="/hotels">OTELLER</a></li>
 					</ul>
 				</div>
 				<!-- End Topbar -->
@@ -97,8 +99,8 @@
 				</div>
 			</div>
 
-			<div class="row margin-bottom-20">
-				<div class="col-md-3">
+			<div class="row margin-bottom-20" style="text-align:center">
+				<div class="col-md-3 col-md-offset-3 col-sm-6" >
 					<!-- Orange Panel -->
 					<div class="panel panel-orange">
 						<div class="panel-heading">
@@ -112,7 +114,7 @@
 					</div>
 					<!-- End Orange Panel -->
 				</div>
-				<div class="col-md-2">
+				<div class="col-md-3">
 					<!-- Orange Panel -->
 					<div class="panel panel-orange">
 						<div class="panel-heading">
@@ -120,36 +122,8 @@
 						</div>
 						<div class="panel-body">
 							<p style="text-align:center">
-							<b style="font-size:30px">4</b>gece
-							<b style="font-size:30px">5</b>gün
-							</p>
-						</div>
-					</div>
-					<!-- End Orange Panel -->
-				</div>
-				<div class="col-md-3">
-					<!-- Orange Panel -->
-					<div class="panel panel-orange">
-						<div class="panel-heading">
-							<h3 class="panel-title"><i class="fa fa-hotel"></i> Otel</h3>
-						</div>
-						<div class="panel-body">
-							<p style="text-align:center">
-							<a href="#"><b style="font-size:30px">H</b>OTEL <b style="font-size:30px">H</b>OLLYWOOD</a>
-							</p>
-						</div>
-					</div>
-					<!-- End Orange Panel -->
-				</div>
-				<div class="col-md-4">
-					<!-- Orange Panel -->
-					<div class="panel panel-orange">
-						<div class="panel-heading">
-							<h3 class="panel-title"><i class="fa fa-coffee"></i> Menü</h3>
-						</div>
-						<div class="panel-body">
-							<p style="text-align:center">
-							<b style="font-size:30px">K</b>ahvaltı, <b style="font-size:30px">B</b>oşnak Böreği, <b style="font-size:30px">B</b>oşnak Köftesi
+							<b style="font-size:30px">1</b>gece
+							<b style="font-size:30px">2</b>gün
 							</p>
 						</div>
 					</div>
