--- a/templates/cities.html
+++ b/templates/cities.html
@@ -19,11 +19,13 @@
 				<!-- Topbar -->
 				<div class="topbar">
 					<ul class="loginbar pull-right">
-						<li><a href="/contact">HAKKIMIZDA</a></li>
+						<li><a href="/aboutus">HAKKIMIZDA</a></li>
 						<li class="topbar-devider"></li>
 						<li><a href="/contact">İLETİŞİM</a></li>
 						<li class="topbar-devider"></li>
-						<li><a href="/gallery">GALERİ</a></li>
+						<li><a href="/gallery">GALERİ</a>
+						<li class="topbar-devider"></li>
+						<li><a href="/hotels">OTELLER</a></li>
 					</ul>
 				</div>
 				<!-- End Topbar -->
