--- a/templates/contact.html
+++ b/templates/contact.html
@@ -111,7 +111,7 @@
 
 					<p>Bize emaille, telefonla yada aşağıdaki formu doldurarak ulaşabilirsiniz. </p><br />
 
-					<form action="{% static "php/sky-forms-pro/demo-contacts-process.php" method="post" id="sky-form3" class="sky-form contact-style">
+					<form action="{% static "php/sky-forms-pro/demo-contacts-process.php"%}" method="post" id="sky-form3" class="sky-form contact-style">
 						<fieldset class="no-padding">
 							<label>İsim Soyisim <span class="color-red">*</span></label>
 							<div class="row sky-space-20">
@@ -157,6 +157,9 @@
 							<p>Mesajınız başarıyla gönderilmiştir.</p>
 						</div>
 					</form>
+
+					{% placeholder 'Form3' %}
+
 				</div><!--/col-md-9-->
 
 				<div class="col-md-3">
